# Ecommerce

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
core/: urls.py  views.py
core/migrations/: 0001_initial.py
demo/: settings.py  urls.py
store/: admin.py  models.py  views.py
store/migrations/: 0001_initial.py
templates/: base.html  header.html  index.html  nav.html
